--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap');
 
-*{
+:root {
+    --dark-bg-color: hsl(207, 26%, 17%);
+    --article-color: hsl(209, 23%, 22%);
+    --text-color: hsl(0, 0%, 100%);
+    --light-mode-text: hsl(200, 15%, 8%);
+    --light-mode-input: hsl(0, 0, 52%);
+    --light-mode-background: hsl(0, 0%, 98%)
+}
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -10,115 +19,177 @@ img{
     max-width: 100%;
 }
 
-body{
-    font-family: 'Nunito Sans, sans-serif';
-    padding: 20px;
-    background-color: #202D36;
+ul {
+    list-style-type: none;
+}
+
+.buttons {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.btn {
+    background-color: var(--dark-bg-color);
+    padding: 5px;
+    cursor: pointer;
+    text-decoration: none;
     color: #fff;
+    border: 2px solid var(--dark-bg-color);
+    border-radius: 4px;
+    transition: background-color 0.2s;;
+}
+
+.btn:hover {
+    background-color: #fff;
+    color: var(--dark-bg-color);
+}
+
+.btn-light {
+    background-color: var(--article-color);
+    border: 2px solid var(--article-color);
+}
+
+body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+      sans-serif;
+     background-color: var(--dark-bg-color);
+     color: var(--text-color);
+     transition: background-color 0.4s;
+}
+
+body.light-theme {
+  background-color: #dfdfdf;
+  color: var(--light-mode-text);
+}
+
+/* Overall Padding */
+.header,
+.form,
+.countries {
+    padding: 10px, 50px;
 }
 
 .header {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-    padding: 20px 0;
-    background-color: #2b3743;
+    color: var(--text-color);
+    background-color: hsl(209, 23%, 22%);
+    box-shadow: 0 5px 10px hsla(200, 15%, 8%, 0.1);
 }
 
-/* Filter */
-.filter {
+header.light-theme {
+    background-color: var(--light-mode-background);
+    color: var(--light-mode-text);
+}
+
+.header i {
+    cursor: pointer;
+}
+
+/* Form Component */
+.form {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+    padding: 40px 50px;
 }
 
-.filter .form-control {
-    width: 100%;
-}
-
-.filter .form-control input{
-  background-color: #2b3743;
-  border: none;
-  outline: none;
-  padding: 8px; 
-  border-radius: 5px;
-  color: #fff;
+.form input,
+.form select {
+  background-color: var(--article-color);
+  padding: 12px;
   font-family: inherit;
-  letter-spacing: 0.5px;
-  width: 100%;
-  margin: 0 0 30px;
+  border: none;
+  border-radius: 5px;
+  color: var(--text-color);
 }
 
-.filter .form-control input::placeholder {
-    color: #fff;
-
+.form input::placeholder {
+    color: var(--text-color);
 }
 
-.filter .region-filter {
-    width: 100%;
+.form input.light-theme,
+.form select.light-theme {
+  background-color: var(--light-mode-input);
+}
+/* Countries Componnent */
+.countries {
+    padding: 0 50px 50px;
 }
 
-.filter .region-filter .select {
-    background-color: #2b3743;
-    color: #fff;
-    font-family: inherit;
-    padding: 8px;
+.countries article {
+    transition: background-color 0.4s;
 }
 
-.grid{
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 40px;
-}
-
-/* .grid article {
-    box-shadow: 0 10px 10px rgb(9, 17, 22, 0.5);
-} */
-
-.grid article img {
+.countries .flag img {
     border-radius: 5px 5px 0 0;
-
 }
 
-.grid .details {
-    background-color: #2b3743;
-    padding: 40px 20px;
-    margin-top: -20px;
+.countries .details {
     border-radius: 0 0 5px 5px;
+    background-color: var(--article-color);
+    margin: -10px 0 30px;
+    padding: 20px;
+    color: var(--text-color);
+    transition: background-color 0.4s;
 }
 
-.grid .details h3 {
-    padding-bottom: 10px;
+.countries .details.light-theme {
+    background-color: var(--light-mode-background);
+    color: var(--light-mode-text)
 }
 
-.grid .details h4 {
-    padding-bottom: 5px;
+.countries .details h4 {
+    margin: 10px 0;
 }
 
-.grid .details h4 span {
+.countries .details h4 span {
     font-weight: 300;
 }
 
-
+/* Media Queries */
 @media (min-width: 640px) {
-    .grid {
+    .countries {
+        display: grid;
         grid-template-columns: repeat(2, 1fr);
+        gap: 40px;
+    }
+
+    .countries .details {
+        margin: -10px 0 0;
     }
 }
 
-@media (min-width: 768px) {
-    .grid {
+
+@media (min-width: 992px) {
+    .countries {
         grid-template-columns: repeat(3, 1fr);
     }
 }
 
-@media (min-width: 992px) {
-    body {
-        padding: 50px 100px;
-    }
-    .grid {
+@media (min-width: 1366px) {
+    .countries {
         grid-template-columns: repeat(4, 1fr);
-        gap: 60px;
+    }
+}
+
+@media (max-width: 500px) {
+    .header h1 {
+        font-size: 20px;
+        padding: 20px 0;
+    }
+
+    .form input {
+        width: 90vw;
+        margin-bottom: 20px;
+    }
+
+    .form .select select {
+        width: 50vw;
     }
 }
